fix: product layout fixed on tablets

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -11,6 +11,7 @@ $btn-grey: #efefef;
 $product-card-background: #f5f5f5;
 
 $breakpoints-mobile: 856px;
+$breakpoints-tablet: 1200px;
 
 $border-radius: 4px;
 $transition: all 0.2s ease-in-out;
